--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
   <div id="fullpage">
     <div id="introSlide" class="section" data-anchor="intropg">
       <div id="intro" style="text-align:center">
-        <h1> Movie Market Analysis</h1>
+        <h1> Movie Market Profitability Analysis</h1>
         <p class="content">A visualization narrative by Nitish Jain (nitishj2@illinois.edu)</p>
       </div>
       <div id="intro-img">
@@ -66,8 +66,33 @@
       </div>
     </div>
 
+    <div id="timeSeriesSlide" class="section" data-anchor="timeSeries-line-pg">
+      <h1>Movie Industry Profitability and other trends over time</h1>
+      <div style="left:50px;position:relative">
+        <div class="row">
+          <div class="column-half">
+            <div class="yearly-bugdet-revenue-line-chart-container"></div>
+            <div style="top:20px;left:150px;width:400px;position:relative">
+              <p class="content">
+                <span class="textHighlight">Key Takeaway: </span>Revenue is steadily increasing while the budget has stayed nearly constant.
+              </p>
+            </div>
+          </div>
+          <div class="column-half">
+            <div class="yearly-moviecount-profitability-line-chart-container"></div>
+            <div style="top:20px;left:150px;width:400px;position: relative;">
+              <p class="content">
+                <span class="textHighlight">Key Takeaway: </span>Number of Movies has stayed constant while the profitability has seen some spikes led by highly popular
+                movies.
+              </p>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+
     <div id="measureByGenreSlide" class="section" data-anchor="genere-bar-pg">
-      <h1>Popular is not always Profitable!</h1>
+      <h1>Role of Genre in Profitability</h1>
       <div style="left:50px;position:relative">
         <div style="top:100px;left:800px;width:450px;position:absolute">
           <p class="content">
@@ -95,24 +120,18 @@
       </div>
     </div>
 
-    <div id="timeSeriesSlide" class="section" data-anchor="timeSeries-line-pg">
-      <h1>Movie Industry trends over time</h1>
-      <div style="left:50px;position:relative">
+    <div id="bubbleSlide" class="section" data-anchor="bubble-pg">
+      <h1>Role of Budget and Revenue in Profitability</h1>
+      <div style="left:150px;position:relative">
         <div class="row">
           <div class="column-half">
-            <div class="yearly-bugdet-revenue-line-chart-container"></div>
-            <div style="top:20px;left:150px;width:400px;position:relative">
-              <p class="content">
-                <span class="textHighlight">Key Takeaway: </span>Revenue is steadily increasing while the budget has stayed nearly constant.
-              </p>
-            </div>
+            <div class="scatter-plot-container"></div>
           </div>
           <div class="column-half">
-            <div class="yearly-moviecount-profitability-line-chart-container"></div>
-            <div style="top:20px;left:150px;width:400px;position: relative;">
+            <div style="top:100px;left:50px;width:400px;position:relative">
               <p class="content">
-                <span class="textHighlight">Key Takeaway: </span>Number of Movies has stayed constant while the profitability has seen some spikes led by highly popular
-                movies.
+                <span class="textHighlight">Key Takeaway: </span>Avatar series, Star Wars, Avengers and Furious series stand out !
+                They garnered high revenue with reasonable budget.
               </p>
             </div>
           </div>
@@ -133,29 +152,10 @@
             <div style="top:20px;position:relative" class="top-movies-bar-chart-container"></div>
           </div>
           <div class="column-half">
-            <div style="top:100px;left:100px;width:400px;position:relative">
+            <div style="top:100px;left:200px;width:400px;position:relative">
               <p class="content">
                 <span class="textHighlight">Key Takeaway: </span> Avatar, Star Wars and Avengers are top grossing movies while Pirates of the Caribbean has big budgets.
                 Minios and Big Hero 6 won heart of the people in terms of popularity.
-              </p>
-            </div>
-          </div>
-        </div>
-      </div>
-    </div>
-
-    <div id="bubbleSlide" class="section" data-anchor="bubble-pg">
-      <h1>Budget, Revenue and Profitability</h1>
-      <div style="left:150px;position:relative">
-        <div class="row">
-          <div class="column-threefourth">
-            <div class="scatter-plot-container"></div>
-          </div>
-          <div class="column-quarter">
-            <div style="top:100px;left:-500px;width:400px;position:relative">
-              <p class="content">
-                <span class="textHighlight">Key Takeaway: </span>Avatar series, Star Wars, Avengers and Furious series stand out !
-                They garnered high revenue with reasonable budget.
               </p>
             </div>
           </div>
@@ -192,8 +192,8 @@
       //scrollHorizontally:true,
       navigation: true,
       navigationPosition: 'right',
-      anchors: ["intropg", "abtvizpg", "genere-bar-pg", "timeSeries-line-pg", "topMovies-pg", "bubble-pg"],
-      navigationTooltips: ['Intro', 'About', 'Measures By Genre', 'Trends over time', 'Top 15 Movies by Measures', 'Big Picture with Scatter Plot'],
+      anchors: ["intropg", "abtvizpg", "timeSeries-line-pg", "genere-bar-pg", "bubble-pg", "topMovies-pg"],
+      navigationTooltips: ['Intro', 'About', 'Trends over time', 'Genre & Profitability', 'Budget/Revenue & Profitability', 'Top Movies'],
       slidesNavPosition: "left",
       keyboardScrolling: true,
       sectionsColor: ['black', 'black', 'black', 'black', 'black', 'black'],
